5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1667_2973.log
== TEST (2019-04-16 16:13:32) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))


s= var1 + (var2*var3)

cc= 1000 * 0.1
print (cc)
-- OUTPUT:
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:40) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))


s= var1 + (var2*var3)

cc= 1000 * 0.10
print (cc)
-- OUTPUT:
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:52) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))


s= var1 + (var2*var3)

cc= 1000 * 0.01''
print (cc)
-- ERROR:
File "XXXX", line 8
    cc= 1000 * 0.01''
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:55) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))


s= var1 + (var2*var3)

cc= 1000 * 0.01
print (cc)
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:05) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))


s= var1 + (var2*var3)

cc= 1000 * 0.001
print (cc)
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:16) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))


s= var1 + (var2*var3)

cc=  * 0.001
print (cc)
-- ERROR:
File "XXXX", line 8
    cc=  * 0.001
        ^
SyntaxError: can't use starred expression here
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:20) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))


s= var1 + (var2*var3)

cc= 500 * 0.001
print (cc)
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:50) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

print (s)
-- OUTPUT:
7202
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:04) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

print (s)
-- OUTPUT:
7202
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:48) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s > 100 :
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:26) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s > 100 :
	print(s)
	print("ACIMA")
else:
	print(s)
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:24:34) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s > 100 :
	print(s)
	print("ACIMA")
else:
	print(s)
	print("OK")
-- EXECUTION TIME:
0.220587
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:11) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s > 100 :
	print(s)
	print("ACIMA")
else:
	print(s)
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:58) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s <= 100 :
	print(s)
	print("OK")
else:
	print(s)
	print("OAcima")
-- OUTPUT:
7202
OAcima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:21) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s <= 100 :
	print(s)
	print("OK")
else:
	print(s)
	print("Acima")
-- OUTPUT:
7202
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:26:43) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s <= 100 :
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")
-- EXECUTION TIME:
0.122633
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:45) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s <= 100 :
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:50) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s <= 100 :
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:30) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < 100 :
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:37) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < 100 :
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")
-- EXECUTION TIME:
0.126637
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:23) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var2 :
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:31:30) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var2 :
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")
-- EXECUTION TIME:
0.143472
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:12) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var2 :
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:37:02) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var2 :
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")
-- EXECUTION TIME:
0.167816
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:03) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var2 :
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:15) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var2 :
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:54) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var1/var3 :
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:38:02) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var1/var3 :
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")
-- EXECUTION TIME:
0.141739
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:12) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var1/var3 :
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:53) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < 100 :
	msg = "OK"
else:
	msg = "ACIMA"
print(s)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:42:00) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < 100 :
	msg = "OK"
else:
	msg = "ACIMA"
print(s)
print(msg)
-- EXECUTION TIME:
0.125891
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:18) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var2 :
	msg = "OK"
else:
	msg = "ACIMA"
print(s)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:45:27) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var2 :
	msg = "OK"
else:
	msg = "ACIMA"
print(s)
print(msg)
-- EXECUTION TIME:
0.151923
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:39) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var1 :
	msg = "OK"
else:
	msg = "ACIMA"
print(s)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:45:48) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var1 :
	msg = "OK"
else:
	msg = "ACIMA"
print(s)
print(msg)
-- EXECUTION TIME:
0.198883
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:45:54) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var3 :
	msg = "OK"
else:
	msg = "ACIMA"
print(s)
print(msg)
-- EXECUTION TIME:
0.185767
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:55) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var3 :
	msg = "OK"
else:
	msg = "ACIMA"
print(s)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:45:56) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var3 :
	msg = "OK"
else:
	msg = "ACIMA"
print(s)
print(msg)
-- EXECUTION TIME:
0.181114
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
7202
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
S: V: T: 4470
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:45:56) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var3 :
	msg = "OK"
else:
	msg = "ACIMA"
print(s)
print(msg)
-- EXECUTION TIME:
0.276959
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
S: V: T: 4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
S: V: T: 7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:45:56) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var3 :
	msg = "OK"
else:
	msg = "ACIMA"
print(s)
print(msg)
-- EXECUTION TIME:
0.254884
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7203
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:

-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
S: V: T: 7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:09) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var3 :
	msg = 'OK'
else:
	msg = 'ACIMA'
print(s)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:38) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var3 :
	msg = 'OK'
else:
	msg = 'ACIMA'
print(s)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:49:45) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < var3 :
	msg = 'OK'
else:
	msg = 'ACIMA'
print(s)
print(msg)
-- EXECUTION TIME:
0.233093
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:16) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s == var1/var3 :
	msg = 'OK'
else:
	msg = 'ACIMA'
print(s)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:51:22) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s == var1/var3 :
	msg = 'OK'
else:
	msg = 'ACIMA'
print(s)
print(msg)
-- EXECUTION TIME:
0.135157
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:51:56) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < 100 :
	msg = 'OK'
else:
	msg = 'ACIMA'
print(s)
print(msg)
-- EXECUTION TIME:
0.212604
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:56) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < 100 :
	msg = 'OK'
else:
	msg = 'ACIMA'
print(s)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:57) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < 100 :
	msg = 'OK'
else:
	msg = 'ACIMA'
print(s)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:57) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < 100 :
	msg = 'OK'
else:
	msg = 'ACIMA'
print(s)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:57) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < 100 :
	msg = 'OK'
else:
	msg = 'ACIMA'
print(s)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:57) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < 100 :
	msg = 'OK'
else:
	msg = 'ACIMA'
print(s)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:51:57) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < 100 :
	msg = 'OK'
else:
	msg = 'ACIMA'
print(s)
print(msg)
-- EXECUTION TIME:
0.147363
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:51:58) 
-- CODE:
var1= int(input("S: "))
var2= int(input("V: "))
var3= int(input("T: "))
s= var1 + (var2*var3)

if s < 100 :
	msg = 'OK'
else:
	msg = 'ACIMA'
print(s)
print(msg)
-- EXECUTION TIME:
0.171792
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
4470
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
7203
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
